Cuda adjoint progress-I

--- a/examples/cuda_adjoint/makefile
+++ b/examples/cuda_adjoint/makefile
@@ -7,11 +7,12 @@ SRCDIR=$(MF_DIR)/src_cuda_adjoint
 phi:
 	rm -rf src
 	cp -r $(SRCDIR) src
-	cd src && cp phi_files/* . && make -f makefile.adjoint clean
+	cd src && cp phi_files/* . && make -f makefile clean
 	cp parameter.F90 src/
-	cd src && make -j -f makefile.adjoint execname
+	cd src && cat device_data_structure.cuf q_variables.cuf flux_residual.cuf state_update.cuf q_lskum.cuf > cuda.cuf
+	cd src && make -j -f makefile execname
 	mv src/execname .
-	@echo "Built mpi adjoint solver w.r.t phi"
+	@echo "Built gpu adjoint solver w.r.t phi"
 
 input:
 	cp -r $(MF_DIR)/mfpre .
@@ -20,5 +21,5 @@ input:
 	rm -rf mfpre
 
 clean:
-	rm -rf src point
+	rm -rf src point cpplot_*
 	rm -f execname graphpart
