--- a/src_cuda_adjoint/makefile.in
+++ b/src_cuda_adjoint/makefile.in
@@ -1,17 +1,6 @@
-include ${PETSC_DIR}/lib/petsc/conf/variables
-include ${PETSC_DIR}/lib/petsc/conf/rules
+#pgi compiler
+FC = pgfortran
 
+#when using cuda-memcheck, use this flag: -ta=nvidia,lineinfo
 
-#Intel compiler
-#FC = mpifort
-#CC = icc
-#flags for intel compiler
-#FFLAGS = -O3  -I$(PETSC_DIR)/include
-
-#gcc compiler
-FC = mpif90
-CC = gcc
-#flags for gcc(profiling)
-#FFLAGS =-march=native -O3 -pg  -I$(PETSC_DIR)/include
-#flags for gcc
-FFLAGS =-march=native -O3 -ffree-line-length-512  -I$(PETSC_DIR)/include
+FFLAGS = -O3 -Mcuda=nordc,lineinfo -Mcuda=keepptx,ptxinfo
