--- a/src_cuda_adjoint/makefile
+++ b/src_cuda_adjoint/makefile
@@ -8,7 +8,9 @@ AD = adBuffer.o adStack.o revolve.o
 
 objects=meshfree_solver.o parameter.o data_structure_b.o point_preprocessor.o initial_conditions.o point_normals.o  generate_connectivity.o \
 		post_processing.o objective_function.o compute_force_coeffs.o adaptation_sensors.o compute_entropy.o stagnation_values.o cuda.o \
-		file_ops.o
+		file_ops.o fpi_solver_b.o q_variables_b.o flux_residual_b.o wall_fluxes_b.o \
+		interior_fluxes_b.o outer_fluxes_b.o limiters_b.o state_update_b.o objective_function_b.o \
+		compute_force_coeffs_b.o compute_entropy_b.o split_fluxes_b.o quadrant_fluxes_b.o stagnation_values_b.o 
 
 adBuffer.o : ADFirstAidKit/adBuffer.f
 	$(FC) -c ADFirstAidKit/adBuffer.f
@@ -45,11 +47,10 @@ data_structure_b.o: data_structure_b.F90 parameter.o
 adaptation_sensors.o: adaptation_sensors.F90 data_structure_b.o
 	$(FC) $(FFLAGS) -c  adaptation_sensors.F90
 
-
 initial_conditions.o: initial_conditions.F90 data_structure_b.o parameter.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
-cuda.o: cuda.cuf initial_conditions.o generate_connectivity.o point_normals.o post_processing.o data_structure_b.o parameter.o stagnation_values.o file_ops.o
+cuda.o: cuda.cuf initial_conditions.o generate_connectivity.o point_normals.o post_processing.o data_structure_b.o parameter.o stagnation_values.o file_ops.o fpi_solver_b.o
 	$(FC) $(FFLAGS) -c  cuda.cuf
 
 point_normals.o: point_normals.F90 data_structure_b.o
@@ -75,6 +76,48 @@ stagnation_values.o: stagnation_values.F90 data_structure_b.o
 
 file_ops.o: file_ops.F90 data_structure_b.o
 	$(FC) $(FFLAGS) -c file_ops.F90
+
+fpi_solver_b.o: fpi_solver_b.F90 data_structure_b.o q_variables_b.o flux_residual_b.o state_update_b.o objective_function_b.o stagnation_values_b.o
+	$(FC) $(FFLAGS) -c fpi_solver_b.F90
+
+q_variables_b.o: q_variables_b.F90 data_structure_b.o
+	$(FC) $(FFLAGS) -c  q_variables_b.F90
+
+flux_residual_b.o: flux_residual_b.F90 data_structure_b.o parameter.o interior_fluxes_b.o wall_fluxes_b.o outer_fluxes_b.o
+	$(FC) $(FFLAGS) -c  flux_residual_b.F90
+
+state_update_b.o: state_update_b.F90 data_structure_b.o flux_residual_b.o
+	$(FC) $(FFLAGS) -c  state_update_b.F90
+
+interior_fluxes_b.o: interior_fluxes_b.F90 data_structure_b.o q_variables_b.o limiters_b.o split_fluxes_b.o #split_fluxes_b.o
+	$(FC) $(FFLAGS) -c  interior_fluxes_b.F90
+
+wall_fluxes_b.o: wall_fluxes_b.F90 quadrant_fluxes_b.o data_structure_b.o q_variables_b.o limiters_b.o split_fluxes_b.o  #split_fluxes_b.o # quadrant_fluxes_b.o
+	$(FC) $(FFLAGS) -c  wall_fluxes_b.F90
+
+outer_fluxes_b.o: outer_fluxes_b.F90 quadrant_fluxes_b.o q_variables_b.o limiters_b.o data_structure_b.o split_fluxes_b.o #split_fluxes_b.o #quadrant_fluxes_b.o
+	$(FC) $(FFLAGS) -c  outer_fluxes_b.F90
+
+limiters_b.o: limiters_b.F90 data_structure_b.o
+	$(FC) $(FFLAGS) -c  limiters_b.F90
+
+quadrant_fluxes_b.o: quadrant_fluxes_b.F90 parameter.o
+	$(FC) $(FFLAGS) -c  quadrant_fluxes_b.F90
+	
+split_fluxes_b.o: split_fluxes_b.F90 parameter.o
+	$(FC) $(FFLAGS) -c  split_fluxes_b.F90
+
+compute_force_coeffs_b.o: compute_force_coeffs_b.F90 data_structure_b.o data_structure_b.o #petsc_bata_structure.o
+	$(FC) $(FFLAGS) -c  compute_force_coeffs_b.F90
+
+compute_entropy_b.o: compute_entropy_b.F90 data_structure_b.o #petsc_bata_structure.o
+	$(FC) $(FFLAGS) -c  compute_entropy_b.F90
+
+objective_function_b.o: objective_function_b.F90 data_structure_b.o compute_entropy_b.o compute_force_coeffs_b.o #compute_enstrophy_b.o
+	$(FC) $(FFLAGS) -c  objective_function_b.F90
+
+stagnation_values_b.o: stagnation_values_b.F90 data_structure_b.o data_structure_b.o
+	$(FC) $(FFLAGS) -c  stagnation_values_b.F90
 
 clean::
 	rm -rf *.mod execname *.o *.ptx poly cuda.cuf
