Use old petsc code as base

--- a/src_cuda_adjoint/makefile.in
+++ b/src_cuda_adjoint/makefile.in
@@ -4,4 +4,5 @@ CC = gcc
 
 #when using cuda-memcheck, use this flag: -ta=nvidia,lineinfo
 
-FFLAGS = -O3 -Mcuda=nordc,lineinfo -Mcuda=keepptx,ptxinfo
+FFLAGS = -O3 -Mcuda=nordc
+#,lineinfo -Mcuda=keepptx,ptxinfo
