--- a/src_mpi_serial/makefile.primal
+++ b/src_mpi_serial/makefile.primal
@@ -7,14 +7,18 @@ include makefile.in
 
 # defining the variables
 
-objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o compute_force_coeffs.o compute_entropy.o compute_enstrophy.o q_lskum_petsc.o
+objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o \
+q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o \
+outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o \
+compute_force_coeffs.o compute_entropy.o compute_enstrophy.o q_lskum_petsc.o
 
 
 execname: $(objects)  
 	$(FC)  -o execname $(FFLAGS) $(objects) $(PETSC_LIB) $(LIBS)
 
 
-meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o petsc_data_structure.o parameter.o q_lskum.o post_processing.o compute_force_coeffs.o q_lskum_petsc.o
+meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o petsc_data_structure.o parameter.o q_lskum.o post_processing.o \
+compute_force_coeffs.o q_lskum_petsc.o
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
 point_preprocessor.o: point_preprocessor.F90 data_structure.o petsc_data_structure.o
@@ -99,5 +103,3 @@ clean::
 	rm -rf *.mod execname *.o
 
 # End of makefile ..
-
-
