--- a/src_mpi_forward/makefile.in
+++ b/src_mpi_forward/makefile.in
@@ -1,20 +1,16 @@
+include ${PETSC_DIR}/lib/petsc/conf/variables
+include ${PETSC_DIR}/lib/petsc/conf/rules
 
 #Intel compiler
-#FC = mpifort
-#CC = icc
+FC = mpifort
+CC = icc
 #flags for intel compiler
-#FFLAGS = -O3 
+#FFLAGS = -O3 -ffree-line-length-512 -I$(PETSC_DIR)/include
 
 #gcc compiler
-FC = gfortran
-CC = gcc
+#FC = gfortran
+#CC = gcc
 #flags for gcc(profiling)
 #FFLAGS =-march=native -O3 -pg 
 #flags for gcc
-FFLAGS =-march=native -O3 -ffree-line-length-512 
-
-
-
-
-
-
+#FFLAGS =-march=native -O3 -ffree-line-length-512 
