--- a/src_mpi_serial/makefile.primal
+++ b/src_mpi_serial/makefile.primal
@@ -10,7 +10,7 @@ include makefile.in
 objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o \
 q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o \
 outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o \
-compute_force_coeffs.o compute_entropy.o compute_enstrophy.o q_lskum_petsc.o
+compute_force_coeffs.o compute_entropy.o q_lskum_petsc.o
 
 
 execname: $(objects)  
@@ -84,14 +84,11 @@ state_update.o: state_update.F90 data_structure.o flux_residual.o
 limiters.o: limiters.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  limiters.F90
 	
-objective_function.o: objective_function.F90 data_structure.o  compute_enstrophy.o compute_entropy.o compute_force_coeffs.o
+objective_function.o: objective_function.F90 data_structure.o compute_entropy.o compute_force_coeffs.o
 	$(FC) $(FFLAGS) -c  objective_function.F90
 	
 compute_force_coeffs.o: compute_force_coeffs.F90 data_structure.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_force_coeffs.F90
-
-compute_enstrophy.o: compute_enstrophy.F90 data_structure.o petsc_data_structure.o
-	$(FC) $(FFLAGS) -c  compute_enstrophy.F90
 
 compute_entropy.o: compute_entropy.F90 data_structure.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_entropy.F90
