Successful objective function add

--- a/src_mpi_serial/makefile.primal
+++ b/src_mpi_serial/makefile.primal
@@ -10,7 +10,7 @@ include makefile.in
 objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o \
 q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o \
 outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o \
-compute_force_coeffs.o compute_entropy.o q_lskum_petsc.o
+compute_force_coeffs.o compute_entropy.o q_lskum_petsc.o stagnation_values.o
 
 
 execname: $(objects)  
@@ -54,7 +54,7 @@ point_normals.o: point_normals.F90 data_structure.o
 generate_connectivity.o: generate_connectivity.F90 data_structure.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  generate_connectivity.F90
 
-fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o state_update.o objective_function.o post_processing.o 
+fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o state_update.o objective_function.o post_processing.o stagnation_values.o
 	$(FC) $(FFLAGS) -c fpi_solver.F90
 
 q_variables.o: q_variables.F90 data_structure.o
@@ -95,6 +95,9 @@ compute_entropy.o: compute_entropy.F90 data_structure.o petsc_data_structure.o
 
 post_processing.o: data_structure.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  post_processing.F90
+
+stagnation_values.o: stagnation_values.F90 data_structure.o petsc_data_structure.o
+	$(FC) $(FFLAGS) -c stagnation_values.F90
 
 clean::
 	rm -rf *.mod execname *.o
