--- a/src_mpi_forward/makefile.forward
+++ b/src_mpi_forward/makefile.forward
@@ -8,31 +8,24 @@ objects=meshfree_solver.o parameter.o data_structure_d.o point_preprocessor.o ut
 point_normals_d.o generate_connectivity_d.o fpi_solver_d.o q_variables_d.o flux_residual_d.o wall_fluxes_d.o \
 interior_fluxes_d.o outer_fluxes_d.o limiters_d.o state_update_d.o objective_function_d.o \
 compute_force_coeffs_d.o compute_entropy_d.o post_processing.o split_fluxes_d.o quadrant_fluxes_d.o stagnation_values_d.o \
-file_ops.o petsc_data_structure.o
+petsc_data_structure.o readcase.o
 
 execname: $(objects)
-	$(FC) -ggdb -Wall -o execname $(FFLAGS) $(PETSC_LIB) $(objects)
-	#$(PETSC_LIB)
+	$(FC) -ggdb -Wall -o execname $(FFLAGS) $(objects) $(PETSC_LIB)
 
 SOURCEFILES = $(wildcard $(SRC)
 
-meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure_d.o parameter.o q_lskum_d.o post_processing.o file_ops.o initial_conditions.o  #petsc_data_structure.o
+meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure_d.o petsc_data_structure.o parameter.o q_lskum_d.o post_processing.o initial_conditions.o  
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90
 
 parameter.o: parameter.F90
 	$(FC) $(FFLAGS)  -c  parameter.F90
 
-point_preprocessor.o: point_preprocessor.F90 data_structure_d.o #petsc_data_structure.o
+point_preprocessor.o: point_preprocessor.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  point_preprocessor.F90
 
-post_processing.o: post_processing.F90 data_structure_d.o #petsc_data_structure.o
+post_processing.o: post_processing.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  post_processing.F90
-
-# data_structure.o: data_structure.F90 parameter.o
-#	$(FC) $(FFLAGS) -c  data_structure.F90
-
-file_ops.o: file_ops.F90 data_structure_d.o
-	$(FC) $(FFLAGS) -c file_ops.F90
 
 petsc_data_structure.o: petsc_data_structure.F90 parameter.o data_structure_d.o
 	$(FC) $(FFLAGS) -c  petsc_data_structure.F90
@@ -40,14 +33,11 @@ petsc_data_structure.o: petsc_data_structure.F90 parameter.o data_structure_d.o
 utilities.o: utilities.F90
 	$(FC) $(FFLAGS) -c  utilities.F90
 
-initial_conditions.o: initial_conditions.F90 parameter.o data_structure_d.o #petsc_data_structure.o
+initial_conditions.o: initial_conditions.F90 parameter.o data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
 q_lskum_d.o: q_lskum_d.F90 data_structure_d.o point_normals_d.o generate_connectivity_d.o fpi_solver_d.o
 	$(FC) $(FFLAGS) -c  q_lskum_d.F90
-
-# post_processing_d.o: post_processing_d.F90 data_structure_d.o #petsc_data_structure.o
-#	$(FC) $(FFLAGS) -c  post_processing_d.F90
 
 data_structure_d.o: data_structure_d.F90 parameter.o
 	$(FC) $(FFLAGS) -c  data_structure_d.F90
@@ -55,7 +45,7 @@ data_structure_d.o: data_structure_d.F90 parameter.o
 point_normals_d.o: point_normals_d.F90 data_structure_d.o
 	$(FC) $(FFLAGS) -c  point_normals_d.F90
 
-generate_connectivity_d.o: generate_connectivity_d.F90 data_structure_d.o
+generate_connectivity_d.o: generate_connectivity_d.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  generate_connectivity_d.F90
 
 fpi_solver_d.o: fpi_solver_d.F90 data_structure_d.o q_variables_d.o flux_residual_d.o state_update_d.o objective_function_d.o stagnation_values_d.o
@@ -76,9 +66,6 @@ wall_fluxes_d.o: wall_fluxes_d.F90 quadrant_fluxes_d.o data_structure_d.o q_vari
 split_fluxes_d.o: split_fluxes_d.F90 parameter.o
 	$(FC) $(FFLAGS) -c  split_fluxes_d.F90
 
-# split_fluxes.o: split_fluxes.F90 parameter.o
-# 	$(FC) $(FFLAGS) -c  split_fluxes.F90
-
 interior_fluxes_d.o: interior_fluxes_d.F90 data_structure_d.o q_variables_d.o limiters_d.o split_fluxes_d.o #split_fluxes_d.o
 	$(FC) $(FFLAGS) -c  interior_fluxes_d.F90
 
@@ -91,22 +78,19 @@ state_update_d.o: state_update_d.F90 data_structure_d.o flux_residual_d.o
 limiters_d.o: limiters_d.F90 data_structure_d.o
 	$(FC) $(FFLAGS) -c  limiters_d.F90
 
-# initial_conditions_d.o: initial_conditions_d.F90 data_structure_d.o parameter.o #petsc_data_structure.o
-# 	$(FC) $(FFLAGS) -c  initial_conditions_d.F90
-
 objective_function_d.o: objective_function_d.F90 data_structure_d.o compute_entropy_d.o compute_force_coeffs_d.o #compute_enstrophy_d.o
 	$(FC) $(FFLAGS) -c  objective_function_d.F90
 
-compute_force_coeffs_d.o: compute_force_coeffs_d.F90 data_structure_d.o data_structure_d.o #petsc_data_structure.o
+compute_force_coeffs_d.o: compute_force_coeffs_d.F90 data_structure_d.o data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_force_coeffs_d.F90
 
-# compute_enstrophy_d.o: compute_enstrophy_d.F90 data_structure_d.o #petsc_data_structure.o
-# 	$(FC) $(FFLAGS) -c  compute_enstrophy_d.F90
-
-compute_entropy_d.o: compute_entropy_d.F90 data_structure_d.o #petsc_data_structure.o
+compute_entropy_d.o: compute_entropy_d.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_entropy_d.F90
 
-stagnation_values_d.o: stagnation_values_d.F90 data_structure_d.o data_structure_d.o
+stagnation_values_d.o: stagnation_values_d.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  stagnation_values_d.F90
+
+readcase.o: readcase.F90 data_structure_d.o petsc_data_structure.o
+	$(FC) $(FFLAGS) -c  readcase.F90 
 clean::
 	rm -rf *.mod execname *.o
