--- a/examples/mpi_adjoint/makefile
+++ b/examples/mpi_adjoint/makefile
@@ -2,17 +2,16 @@ ifndef MF_DIR
 	$(error directory not set)
 endif
 
-SRCDIR=$(MF_DIR)/src_cuda_adjoint
+SRCDIR=$(MF_DIR)/src_mpi_adjoint
 
 phi:
 	rm -rf src
 	cp -r $(SRCDIR) src
-	cd src && cp phi_files/* . && make -f makefile clean
+	cd src && cp phi_files/* . && make -f makefile.adjoint clean
 	cp parameter.F90 src/
-	cd src && cat device_data_structure.cuf q_variables.cuf flux_residual.cuf state_update.cuf q_lskum.cuf > cuda.cuf
-	cd src && make -j -f makefile execname
+	cd src && make -j -f makefile.adjoint execname
 	mv src/execname .
-	@echo "Built gpu adjoint solver w.r.t phi"
+	@echo "Built mpi adjoint solver w.r.t phi"
 
 input:
 	cp -r $(MF_DIR)/mfpre .
@@ -21,5 +20,5 @@ input:
 	rm -rf mfpre
 
 clean:
-	rm -rf src point cpplot_*
+	rm -rf src point
 	rm -f execname graphpart
