--- a/examples/mpi_adjoint/case.in
+++ b/examples/mpi_adjoint/case.in
@@ -1,3 +1,7 @@
--cfl 0.5
--max_iters 5
--format_file quadtree
+-cfl 0.2
+-max_iters 3
+-format_file legacy
+-vl_const 650
+-inner_iterations 1
+-adjoint_mode blackbox
+-chkpts 3
