Unstable commit change. Currently, the values do not match for serial, adjoint and moi_adjoint forward pass. This is from the new updates and bugfixes in the serial that were attempted to be updated in the adjoint. A context save of this faulty code is made.

--- a/examples/mpi_adjoint/case.in
+++ b/examples/mpi_adjoint/case.in
@@ -1,8 +1,9 @@
 -cfl 0.2
--max_iters 1000
+-max_iters 1
 -format_file legacy
 -vl_const 650
--inner_iterations 3
+-inner_iterations 1
 -adjoint_mode blackbox
 -chkpts 160
 -restart_solution no
+-read_phi no
