--- a/src_serial/makefile.primal
+++ b/src_serial/makefile.primal
@@ -11,7 +11,7 @@ objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o util
 
 
 execname: $(objects)  
-	$(FC)  -o execname $(FFLAGS) $(objects) $(LIBS)
+	$(FC) -ggdb -Wall -o execname $(FFLAGS) $(objects) $(LIBS)
 
 
 meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o q_lskum.o post_processing.o compute_force_coeffs.o file_ops.o initial_conditions.o
@@ -93,5 +93,3 @@ clean::
 	rm -rf *.mod execname *.o
 
 # End of makefile ..
-
-
