--- a/src_mpi_serial/makefile.primal
+++ b/src_mpi_serial/makefile.primal
@@ -2,15 +2,16 @@
 
 include makefile.in
 
-
-
+ifndef VERBOSE
+.SILENT:
+endif
 
 # defining the variables
 
 objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o \
 q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o \
 outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o \
-compute_force_coeffs.o compute_entropy.o q_lskum_petsc.o stagnation_values.o
+compute_force_coeffs.o compute_entropy.o stagnation_values.o
 
 
 execname: $(objects)  
@@ -18,7 +19,7 @@ execname: $(objects)
 
 
 meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o petsc_data_structure.o parameter.o q_lskum.o post_processing.o \
-compute_force_coeffs.o q_lskum_petsc.o
+compute_force_coeffs.o 
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
 point_preprocessor.o: point_preprocessor.F90 data_structure.o petsc_data_structure.o
@@ -44,9 +45,6 @@ initial_conditions.o: initial_conditions.F90 data_structure.o parameter.o petsc_
 
 q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o fpi_solver.o initial_conditions.o
 	$(FC) $(FFLAGS) -c  q_lskum.F90
-
-q_lskum_petsc.o: q_lskum_petsc.F90 data_structure.o point_normals.o generate_connectivity.o initial_conditions.o petsc_data_structure.o state_update.o
-	$(FC) $(FFLAGS) -c  q_lskum_petsc.F90
 
 point_normals.o: point_normals.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  point_normals.F90
