--- a/examples/mpi_serial/case.in
+++ b/examples/mpi_serial/case.in
@@ -1,12 +1,12 @@
--cfl 1.5
+-cfl 0.2
 -max_iters 100
--format_file quadtree
--vl_const 10
+-format_file legacy
+-vl_const 650
 -inner_iterations 3
--restart_solution no 
+-restart_solution yes 
 -read_phi yes
--shapes 3
+-shapes 1
 -power 0.0
--aoa 16.0
+-aoa 2.0
 -tscheme ssprk43
--mach 0.2
+-mach 0.63
