fixed cmake for cuda

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ project(mfcfd)
 ENABLE_LANGUAGE(Fortran)
 ENABLE_LANGUAGE(C)
 ENABLE_LANGUAGE(CXX)
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 if( NOT "${MFCFD}" MATCHES "CUDA" )
@@ -65,12 +64,18 @@ target_link_libraries(execname ${LIBS})
 
 elseif( "${MFCFD}" MATCHES "CUDA" )
 message("Building Cuda Meshfree Solver")
-#add_compile_options(-O3 -Mcuda=nordc -Mcuda=ptxinfo)
+#add_compile_options(-Mcuda=nordc,lineinfo -Mcuda=keepptx,ptxinfo)
 FILE(GLOB MFCFD_SOURCES "${CMAKE_SOURCE_DIR}/src_cuda/*.F90")
-FILE(GLOB MFCFD_CUDA_SOURCES "${CMAKE_SOURCE_DIR}/src_cuda/*.cuf")
+SET(MFCFD_CUDA_SOURCES ${CMAKE_SOURCE_DIR}/src_cuda/device_data_structure.cuf ${CMAKE_SOURCE_DIR}/src_cuda/q_variables.cuf ${CMAKE_SOURCE_DIR}/src_cuda/flux_residual.cuf ${CMAKE_SOURCE_DIR}/src_cuda/state_update.cuf ${CMAKE_SOURCE_DIR}/src_cuda/q_lskum.cuf)
+file(WRITE cuda.F90.in "")
+foreach(MFCFD_CUDA_FILE ${MFCFD_CUDA_SOURCES})
+  file(READ ${MFCFD_CUDA_FILE} CONTENTS)
+  file(APPEND cuda.F90.in "${CONTENTS}")
+endforeach()
+configure_file(cuda.F90.in cuda.F90 COPYONLY)
 set(CUDA_SEPARABLE_COMPILATION ON)
-set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -O3 -Mcuda=nordc")
-add_executable(execname ${MFCFD_SOURCES} ${MFCFD_CUDA_SOURCES})
+set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Mcuda=nordc,lineinfo")
+add_executable(execname ${MFCFD_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/cuda.F90)
 target_link_libraries(execname ${CUDA_cusparse_LIBRARY} ${LIBS})
 
 else()
