--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,10 @@ link_directories( ${HDF5_LIBRARY_DIRS})
 include_directories(${HDF5_Fortran_INCLUDE_DIRS})
 set(LIBS ${LIBS} ${HDF5_Fortran_LIBRARIES})
 
-if( "${MFCFD}" MATCHES "SERIAL" )
-message("Building Serial MeshFree Solver")
+if( "${MFCFD}" MATCHES "PRIMAL" )
+message("Building Primal MeshFree Solver")
 add_compile_options(-march=native -O3 -ffree-line-length-512)
-FILE(GLOB MFCFD_SOURCES "${CMAKE_SOURCE_DIR}/src_mpi_serial/*.F90")
+FILE(GLOB MFCFD_SOURCES "${CMAKE_SOURCE_DIR}/src_mpi_primal/*.F90")
 add_executable(execname ${MFCFD_SOURCES})
 target_link_libraries(execname ${LIBS})
 
@@ -79,8 +79,8 @@ add_executable(execname ${MFCFD_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/cuda.F90)
 target_link_libraries(execname ${CUDA_cusparse_LIBRARY} ${LIBS})
 
 else()
-message("Building Default Serial MeshFree Solver")
-FILE(GLOB MFCFD_SOURCES "${CMAKE_SOURCE_DIR}/src_mpi_serial/*.F90")
+message("Building Default Primal MeshFree Solver")
+FILE(GLOB MFCFD_SOURCES "${CMAKE_SOURCE_DIR}/src_mpi_primal/*.F90")
 add_executable(execname ${MFCFD_SOURCES})
 target_link_libraries(execname ${LIBS})
 
